--- a/styles/index.scss
+++ b/styles/index.scss
@@ -5,7 +5,7 @@
   position: relative;
   text-align: center;
   height: 80vh;
-  max-height: 580px;
+  max-height: 630px;
   object-fit: cover;
   object-position: right top;
 
@@ -18,7 +18,7 @@
   display: inline-block;
   max-width: none;
   height: 80vh;
-  max-height: 580px;
+  max-height: 630px;
   object-fit: cover;
   object-position: right top;
 }
@@ -62,14 +62,14 @@
   line-height: 100vh;
   text-align: center;
   height: 100vh;
-  max-height: 580px;
+  max-height: 630px;
 }
 
 .Modern-Slider .item .info > div {
   display: inline-block !important;
   vertical-align: middle;
   height: 80vh;
-  max-height: 580px;
+  max-height: 630px;
 }
 
 .slider-overlay {
@@ -77,7 +77,7 @@
   margin-top: 80px;
   min-height: 400px;
   height: 80vh;
-  max-height: 580px;
+  max-height: 630px;
   position: absolute;
   top: 0;
   background: linear-gradient(
@@ -88,11 +88,14 @@
   );
 
   &__content {
-    padding-top: 25%;
+    padding-top: 20%;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-start;
+    justify-content: center !important;
+    @media (max-width: 1500px) {
+      padding-top: 10%;
+    }
   }
 
   h2 {
@@ -108,6 +111,9 @@
     color: white;
     font-family: "Work Sans", sans-serif;
     line-height: 1.3em;
+  }
+  button {
+    margin-top: 3rem;
   }
   z-index: 1;
 }
