--- a/styles/index.css
+++ b/styles/index.css
@@ -111,6 +111,11 @@
 .slider-overlay button {
   margin-top: 3rem;
 }
+@media (max-width: 1500px) {
+  .slider-overlay button {
+    margin-top: 2rem;
+  }
+}
 
 * {
   margin: 0;
