--- a/styles/index.scss
+++ b/styles/index.scss
@@ -5,7 +5,7 @@ $darker-blue: #464b6d;
 $hilight-color: rgb(255, 177, 8);
 $hilight-dark: rgb(212, 148, 9);
 $light-blue: #ecedf3db;
-$grey: #6a7385;
+$grey: #515969;
 $white: white;
 $light-black: rgb(62, 62, 62);
 $dark-white: rgba(244, 244, 244, 0.552);
@@ -32,7 +32,7 @@ $dark-white: rgba(244, 244, 244, 0.552);
 
 p {
   font-size: 18px;
-  font-weight: 300;
+  font-weight: 400;
   color: $grey;
   font-family: "Roboto", sans-serif;
   line-height: 1.7em;
@@ -62,7 +62,7 @@ h1 {
 h2 {
   padding-bottom: 0.27em;
   font-size: 62px;
-  font-weight: 400;
+  font-weight: 700;
   color: $dark-blue;
   letter-spacing: -5px;
   line-height: 1em;
@@ -115,7 +115,7 @@ h5 {
   }
 
   h1 {
-    font-size: 120px;
+    font-size: 140px;
   }
 
   h2 {
@@ -133,11 +133,11 @@ button {
   border: none;
   border-radius: 0.3rem;
   color: #222647;
-  font-size: 16px;
+  font-size: 19px;
   padding: 1rem 2rem;
   margin: 1.5rem 0;
   transition: 1s;
-  font-weight: 600;
+  font-weight: 700;
   cursor: pointer;
 
   i {
@@ -189,38 +189,6 @@ body > #header {
   position: fixed;
 }
 
-#header {
-  position: fixed;
-  z-index: 9000;
-  overflow: auto;
-  transition: all 0.15s linear;
-  overflow: hidden;
-  width: 100%;
-  padding: 1rem 2rem;
-}
-
-.header-image {
-  background-image: url("lapis-logo-light.png");
-  width: 170px;
-  height: 50px;
-  background-size: cover;
-}
-
-#header.active {
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
-  background: white;
-  .header-image {
-    background-image: url("lapis-logo.png");
-  }
-  a {
-    color: $dark-blue;
-
-    &:hover {
-      color: $hilight-color;
-    }
-  }
-}
-
 @import "animations.scss";
 @import "pages.scss";
 
@@ -267,11 +235,12 @@ body > #header {
   transition: all 0.15s linear;
   overflow: hidden;
   width: 100%;
-  padding: 1rem 2rem;
+  padding: 0.6rem 2rem;
+  background-color: #fff;
 }
 
 .header-image {
-  background-image: url("../lapis-logo-light.png");
+  background-image: url("../lapis-logo.png");
   width: 170px;
   height: 50px;
   background-size: cover;
@@ -286,6 +255,8 @@ body > #header {
   &__links {
     a {
       color: $dark-blue;
+      font-weight: 900;
+      // font-size: 60px;
     }
   }
 }
@@ -353,6 +324,8 @@ body {
 .home-header {
   p {
     color: $white;
+    font-size: 25px !important;
+    // line-height: 1.1em;
   }
 }
 
@@ -384,7 +357,6 @@ body {
 }
 
 .header {
-  background-color: $dark-blue;
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.1);
   position: fixed;
   width: 100%;
@@ -396,14 +368,16 @@ body {
     align-items: center;
     flex-direction: row !important;
     margin-right: 1.5em;
+
     li {
       list-style-type: none;
       margin-left: 2em;
+      font-size: 18px;
     }
     a {
       text-decoration: none;
-      color: $white;
-      font-weight: 400;
+      color: $dark-blue;
+      font-weight: 900;
       transition: 1s;
       text-decoration: none;
 
@@ -513,7 +487,7 @@ body {
 
     .title {
       p {
-        font-weight: 500;
+        font-weight: 700;
         color: $dark-blue;
       }
     }
