--- a/styles/index.scss
+++ b/styles/index.scss
@@ -133,7 +133,7 @@ button {
   border: none;
   border-radius: 0.3rem;
   color: #222647;
-  font-size: 19px;
+  font-size: 23px;
   padding: 1rem 2rem;
   margin: 1.5rem 0;
   transition: 1s;
@@ -324,8 +324,13 @@ body {
 .home-header {
   p {
     color: $white;
-    font-size: 25px !important;
+    font-size: 28px !important;
+    margin-bottom: 2rem !important;
+
     // line-height: 1.1em;
+    // button {
+    //   margin-top: 5rem !important;
+    // }
   }
 }
 
